--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,5 @@
 <hr />
-<<footer>
-  
-</footer>
+<footer>
 <div id="footer">
   <ul>
     <li><%= link_to "Home", root_path %></li>
@@ -11,3 +9,4 @@
     <li><%= link_to "Help", help_path %></li>
   </ul>
 </div>
+</footer>
