--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,8 +2,10 @@
 <ul>
   <% if user_signed_in? %>
     <li>Logged in as <%= current_user.email %></li>
+    <li><%= link_to "Profile", current_user %></li>
     <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
     <li><%= link_to('Edit registration', edit_user_registration_path) %></li>
+    <li><%= link_to "User", users_path %></li>
   <% else %>
     <li><%= link_to('Login', new_user_session_path) %> </li>
     <li><%= link_to('Register', new_user_registration_path) %></li>
