--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,12 @@
       <%= tweet.content %>
       <small>(<%= time_ago_in_words(tweet.created_at) %> ago)</small>
       <% if user_signed_in? && current_user == tweet.user %>
-        <%= linke_to "Delete", tweet, :method => "delete" %>
+        <%= link_to "Delete", tweet, :method => "delete" %>
       <% end %>
     </div>
   <% end %>
+</div>
+
+<div id="tweets">
+  <%= render @tweets %>
 </div>
